# AC_WIRE_SWITCH_PROJECT

./: README.md
AC_PROJECT/Using Inheritance/AC/: AC.cpp  AC.h  CMakeLists.txt  Finolex_wire.cpp  Finolex_wire.h  Havels_wire.cpp  Havels_wire.h  Polycab_wire.cpp  Polycab_wire.h  Switch.cpp  Switch.h  Wire.cpp  Wire.h  main.cpp
AC_PROJECT/Virtual Destructor/Ac_task/: AC.cpp  AC.h  CMakeLists.txt  Finolex_wire.cpp  Finolex_wire.h  Havels_wire.cpp  Havels_wire.h  Polycab_wire.cpp  Polycab_wire.h  Switch.cpp  Switch.h  Wire.cpp  Wire.h  main.cpp
AC_PROJECT/Without Using Inheritance/WithoutUsingInheritance/: AC.cpp  AC.h  CMakeLists.txt  Finolex_wire.cpp  Finolex_wire.h  Havels_wire.cpp  Havels_wire.h  Polycab_wire.cpp  Polycab_wire.h  Switch.cpp  Switch.h  main.cpp
